<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.manzolo.bluetoothwatcher.mqtt.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:orderInCategory="200"
        android:title="@string/triggerMenuAction">
        <menu>
            <group>
                <item
                    android:id="@+id/action_trigger_app_update_settings_service"
                    android:orderInCategory="205"
                    android:title="@string/triggerAppUpdateSettingsService"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_trigger_bluetooth_service"
                    android:orderInCategory="210"
                    android:title="@string/triggerBluetoothService"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_trigger_webservice_send_service"
                    android:orderInCategory="220"
                    android:title="@string/triggerWebserviceSendService"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_trigger_location_service"
                    android:orderInCategory="230"
                    android:title="@string/triggerLocationService"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_trigger_restart_service"
                    android:orderInCategory="240"
                    android:title="@string/triggerRestartService"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="300"
        android:title="@string/databaseMenuAction">
        <menu>
            <group>
                <item
                    android:id="@+id/action_dbbackup"
                    android:orderInCategory="300"
                    android:title="@string/dbBackup"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_dbrestore"
                    android:orderInCategory="350"
                    android:title="@string/dbRestore"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="500"
        android:title="@string/utilityMenuAction">
        <menu>
            <group>
                <item
                    android:id="@+id/action_clear_log"
                    android:orderInCategory="500"
                    android:title="@string/clearLog"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:orderInCategory="900"
        android:title="@string/updateMenuAction">
        <menu>
            <group>
                <item
                    android:id="@+id/action_updateApp"
                    android:orderInCategory="900"
                    android:title="@string/updateApp"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_checkForUpdates"
                    android:orderInCategory="910"
                    android:title="@string/checkForUpdates"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

</menu>
